# VerticalScroller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  cmake_install.cmake  makefile
res/: blueprojectile.xcf  enemy1.xcf  level1.txt  level2.txt  redprojectile.xcf  ship.xcf
res/enemies/: testenemy
res/entities/: enemies.txt
res/fonts/: fontIndex.txt
res/guns/: guns.txt
res/levels/: level1.txt  level2.txt  level3.txt
res/sounds/: soundIndex.txt
res/textures/: blueprojectile.xcf  boss1.xcf  enemy2.xcf  ship.xcf  smallprojectile_a.xcf  textureIndex.txt  triupgrade.xcf  triupgradexcf.xcf
res/upgrades/: upgrades.txt
src/: Animation.cpp  Animation.hpp  BezierCurve.cpp  BezierCurve.hpp  Builder.hpp  Bullet.cpp  Bullet.hpp  BulletBuilder.cpp  BulletBuilder.hpp  Button.cpp  Button.hpp  Collision.cpp  Collision.hpp  CubicCurve.cpp  CubicCurve.hpp  Curve.cpp  Curve.hpp  Define.cpp  Define.hpp  Enemy.cpp  Enemy.hpp  EnemyBuilder.cpp  EnemyBuilder.hpp  EnemyFactory.cpp  EnemyFactory.hpp  Factory.hpp  FontManager.cpp  FontManager.hpp  GameObject.cpp  GameObject.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  Gun.cpp  Gun.hpp  GunBuilder.cpp  GunBuilder.hpp  GunFactory.cpp  GunFactory.hpp  (+57 more)
